--- a/clothes/templates/clothes/all-products.html
+++ b/clothes/templates/clothes/all-products.html
@@ -19,24 +19,28 @@ JOSRAM - Todos los Productos
         <h1> Productos </h1>
     </div>
 
+    
     {% include "clothes/includes/header-filter.html" %}
+    
+
     <div class="album py-5 bg-body-tertiary">
         <div class="container">
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-            {% for product in all_products %}
+            {% if clothes %}
+            {% for clothe in clothes %}
                 <div class="col">
                     <div  class="card shadow-sm">
-                        <a href="{% url "clothes-details" product.clothes.slug  %}">
+                        <a href="{% url "clothes-details" clothe.clothes.slug  %}">
                         <div class="hover-card">
-                            <img  src="{{ product.main_image.url}}" class="card-img-top imagen-1" alt="{{product.clothes.name}}">
-                            <img  src="{{ product.model_image_1.url}}" class="card-img-top imagen-2" alt="{{product.clothes.name}}">
+                            <img  src="{{ clothe.main_image.url}}" class="card-img-top imagen-1" alt="{{clothe.clothes.name}}">
+                            <img  src="{{ clothe.model_image_1.url}}" class="card-img-top imagen-2" alt="{{clothe.clothes.name}}">
                         </div>
                         <div class="card-body">
-                            <p class="card-text"> {{product.clothes.name|title }}</p>
+                            <p class="card-text"> {{clothe.clothes.name|title }}</p>
                        
                         <div class="d-flex justify-content-between align-items-center">
                             {% load custom_filters %}
-                            <p class="text-body-secondary"> {{product.clothes.price|currency}} </p>
+                            <p class="text-body-secondary"> {{clothe.clothes.price|currency}} </p>
                         </div>
                         </div>
                     </a>
@@ -44,6 +48,11 @@ JOSRAM - Todos los Productos
                 </div>
             </a>
             {%endfor%}
+            {% else %}
+            <div>
+              <h1> No se encontraron elementos a tu búsqueda! </h1>
+          </div>
+          {% endif %}
             </div>
         </div>
     </div>
