--- a/clothes/templates/clothes/includes/header-filter.html
+++ b/clothes/templates/clothes/includes/header-filter.html
@@ -16,7 +16,7 @@
                   <ul class="dropdown-menu">
                     {% for color in colors %}
                       {% for key, value in color.items %}
-                      <form action="{% url "all-products" %}" method="POST">
+                      <form action="" method="POST">
                         {% csrf_token %}
                       <li>
                         <label>
@@ -33,7 +33,8 @@
                     Precio
                   </a>
                   <ul class="dropdown-menu">
-                    
+                    <form action="" method="POST">
+                      {% csrf_token %}
                     <price-range class="facets__price">
                         <span class="field-currency">$</span>
                         
@@ -49,7 +50,7 @@
                           </div>
                         </price-range>
                         <button class="btn btn-primary" type="submit" name="filter_price">Filtrar</button>
-                      
+                      </form>
                   </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -73,9 +74,6 @@
                 </p>
                 
             </ul>
-            
-           
-              
-            
     </div>
 </div>
+
