--- a/clothes/static/clothes/base.css
+++ b/clothes/static/clothes/base.css
@@ -1,3 +1,22 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Poetsen+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
+html {
+    font-family: "Poetsen One", sans-serif;
+}
+
+h1,
+h2,
+h3 {
+    font-family: "Poetsen One", sans-serif;
+  font-weight: bold;
+}
+
+* {
+    box-sizing: border-box;
+  }
+
 #logo {
     text-align: center;
     padding-left: 20%;
