--- a/clothes/templates/clothes/type-clothes.html
+++ b/clothes/templates/clothes/type-clothes.html
@@ -5,7 +5,6 @@
 
 JOSRAM - {{type.title}}
 
-
 {% endblock %}
 
 
@@ -17,13 +16,13 @@ JOSRAM - {{type.title}}
 
 {% block content %}
 
+
 <section id="header">
   
     <div>
         <h1>{{type.title}} </h1>
     </div>
 
-    
     {% include "clothes/includes/header-filter.html" %}
    
     <div class="filters">
@@ -45,7 +44,7 @@ JOSRAM - {{type.title}}
       {% endif %}
     
       {% if nav_prices %}
-        <form action="{% url "type-clothes" type %}}" method="POST">
+        <form action="{% url "type-clothes" type %}" method="POST">
           {% csrf_token %}
           <li class="nav-item dropdown">
             <label class="btn btn-outline-dark rounded-pill px-3"> 
@@ -57,6 +56,7 @@ JOSRAM - {{type.title}}
           </li>
         </form>
       {% endif %}
+   
     
       {% if nav_prices or nav_colors %}
       <form action="{% url "type-clothes" type %}" method="POST">
@@ -71,10 +71,10 @@ JOSRAM - {{type.title}}
     </ul>
     </div>
     
-            <div class="album py-5 bg-body-tertiary">
+            <div class="album py-0 bg-body-tertiary">
               <div class="container">
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                  {% if clothes %}
+                  {% if page_obj %}
                   {% for clothe in page_obj.object_list %}
                   
                       <div class="col">
@@ -95,8 +95,8 @@ JOSRAM - {{type.title}}
                             </a>
                           </div>
                       </div>
-                    
-                  {%endfor%}
+                   
+                  {% endfor %}
                   {% else %}
                   <div>
                     <h1> No se encontraron elementos a tu búsqueda! </h1>
@@ -104,7 +104,7 @@ JOSRAM - {{type.title}}
                 {% endif %}
                   </div>
               </div>
-            </div>
+            </div>    
 </section>
 
 <section id="pagination">
